freight-api/k8s/freight-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: freight
    namespace: freight
    labels:
        app: freight
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 8000
    selector:
        app: freight
        tier: frontend
