freight-api/k8s/freight-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: stg-freight-ssl-ingress
    namespace: freight
    annotations:
        kubernetes.io/ingress.global-static-ip-name: stg-freight-ssl-ingress-ip
        networking.gke.io/managed-certificates: stg-freight-ssl-certificate
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        kubernetes.io/ingress.allow-http: "false"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "240s"
        ingress.kubernetes.io/proxy-connect-timeout: "240s"
        ingress.kubernetes.io/proxy-send-timeout: "240s"
        ingress.kubernetes.io/proxy-read-timeout: "240s"
spec:
    rules:
        - host: dev-freightapi.alfreddelivery.com
          http:
              paths:
                  - backend:
                        serviceName: freight
                        servicePort: 8000
